# Playground

./: .gitignore  NOTEPAD_SPEC.md  README.md
.github/workflows/: censor.yml  mile-marker.yml  regex-garden.yml  release-censor.yml  release-mile-marker.yml  release-regex-garden.yml
censor/: Cargo.toml  README.md
censor/src/: config.rs  entropy.rs  lib.rs  main.rs  patterns.rs  redactor.rs
censor/tests/: integration.rs
examples/: sampler.garden
ideas/: ai-tools.md
mile-marker/: Cargo.toml  README.md
mile-marker/src/: app.rs  capture.rs  composer.rs  lib.rs  main.rs  session.rs
mile-marker/src/export/: gif.rs  markdown.rs  mod.rs
regex-garden/: README.md  conftest.py  pyproject.toml
regex-garden/src/regex_garden/: __init__.py  canvas.py  plant.py
regex-garden/tests/: test_canvas.py  test_garden.py
src/regex_garden/: __main__.py  cli.py  garden.py
tests/: test_cli.py  test_plant.py
