[package]
name = "censor"
version = "0.1.0"
edition = "2021"
rust-version = "1.74"
description = "Stream-through redactor for secrets in logs, diffs, and shell output."
license = "MIT"
repository = "https://github.com/obselate/Playground"
readme = "README.md"
keywords = ["security", "secrets", "redaction", "cli", "logs"]
categories = ["command-line-utilities", "text-processing"]

[lib]
name = "censor"
path = "src/lib.rs"

[[bin]]
name = "censor"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
regex = "1"
serde = { version = "1", features = ["derive"] }
toml = "0.8"

[dev-dependencies]
tempfile = "3"

[profile.release]
lto = "thin"
strip = true
codegen-units = 1
